--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <meta name="description" property="og:description"
     content="I am a fullstack JavaScript developer proficient in MERN stack" />
   <meta name="author" content="Deeptiranjan Baliarsingh" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/deeptiranjanB.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
